# Doglang

./: .gitignore  404.html  AST  CHANGELOG.md  CONTRIBUTING.md  Readme.md  SemanticAnalyser  SymbolTable.py  SyntaxAnalyser.py  Tokenizer.py  doglang.py  evaluator.py  index.html  main.py  mkdocs.yml  modified-SymbolTable-test.py  prog.doggy  prog1.doggy  pyproject.toml  run_doglang.py  setup.py  sitemap.xml
.github/workflows/: pr-labeler.yml  python-tests.yml  tests.yml
CONTRIBUTING/: index.html
Doglang/issues/: 8
docs/: CONTRIBUTING.md  faq.md  features.md  index.md  installation.md  usage.md
doglang/: ExpressionParser.py  SemanticAnalyser.py  SymbolTable.py  SyntaxAnalyser.py  Tokenizer.py  __init__.py  cli.py  error.py  loopcontrol.py  main.py  test_syntax_analyser.py  test_tokenizer.py
doglang.egg-info/: PKG-INFO  SOURCES.txt
examples/: Ideas  Ideas.md  fib.doggy  loop_control_basic.doggy  operator_precedence.doggy  prog.doggy  prog1.doggy  prog2.doggy  simple_heel_test.doggy  simple_stay_test.doggy
faq/: index.html
features/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  pytest.ini  test_basic.py  test_expression_parser.py  test_integration.py  test_loop_control.py  test_symbol_table_bug.py  test_syntax_analyser.py  test_syntax_error.py
usage/: index.html
